Squashed commit of the following:
commit 80241b2a521d539dbdeea0b55323c6327ab0b1ad
Merge: 58bdce2 9e8a400
Author: Kaiyao Ke <kaiyaok2@illinois.edu>
Date:   Tue Jul 19 13:40:48 2022 +0800

    Merge branch 'Added_support_for_Java_9+' of https://github.com/kaiyaok2/NonDex into Added_support_for_Java_9+

commit 9e8a400f635524a5111164e0fc706aae03153890
Merge: d7fa67c b2bcaa6
Author: Kaiyao Ke <47203510+kaiyaok2@users.noreply.github.com>
Date:   Tue Jul 19 15:33:06 2022 +0800

    Merge branch 'master' into Added_support_for_Java_9+

commit 58bdce297b1b80969f6ea8ef2f47ad5ea6d736d2
Merge: d7fa67c b2bcaa6
Author: Kaiyao Ke <kaiyaok2@illinois.edu>
Date:   Tue Jul 19 13:21:58 2022 +0800

    resolve

commit d7fa67cc707de1ada250b36eed7cbbf170e4d582
Author: Kaiyao Ke <kaiyaok2@illinois.edu>
Date:   Tue Jul 19 07:32:34 2022 +0800

    Added support for Java 9+